--- a/app/comps/usuarios/usuarios.html
+++ b/app/comps/usuarios/usuarios.html
@@ -7,7 +7,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h4 class="modal-title">Confirmacion</h4>
+        <h4 class="modal-title">Confirmación</h4>
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
 
       </div>
@@ -197,8 +197,8 @@
                     class="form-control"
                     ng-keydown="$event.keyCode === 13 && getClientNew(true)"
                     ng-model="nombre_cliente"
-                    placeholder="Búsqueda por Cliente"
-                    aria-label="Búsqueda por Cliente"
+                    placeholder="Búsqueda por cliente"
+                    aria-label="Búsqueda por cliente"
                     aria-describedby="basic-addon2">
                     <div class="input-group-append">
                       <button class="btn btn-outline-secondary"  ng-click="getClientNew(true)" type="button">Buscar</button>
