--- a/app/componentsalksdj/cliente/vendedorinterno.html
+++ b/app/componentsalksdj/cliente/vendedorinterno.html
@@ -71,7 +71,7 @@
 
         </div>
         <div class="col-md-6">
-          <p style="font-weight:bold">Dirección Fiscal de cliente</p>
+          <p style="font-weight:bold">Dirección fiscal de cliente</p>
           <h6 style="font-size:12px" class="text-muted">XXXXXXXXXX XX XXXX XXX XXXXXXX XXX XX</h6>
 
           <!-- <br> -->
