--- a/app/componentsalksdj/main/modal-detalle-deuda.html
+++ b/app/componentsalksdj/main/modal-detalle-deuda.html
@@ -38,7 +38,7 @@
 
                 </div>
                 <div class="col-md-6">
-                  <p style="font-weight:bold">Dirección Fiscal de cliente</p>
+                  <p style="font-weight:bold">Dirección fiscal de cliente</p>
                   <h6 class="text-muted">XXXXXXXXXX XX XXXX XXX XXXXXXX XXX XX</h6>
 
                   <!-- <br> -->
