--- a/app/componentsalksdj/main/modalmodorden.html
+++ b/app/componentsalksdj/main/modalmodorden.html
@@ -65,7 +65,7 @@
                   <h6 class="text-muted">XXXXXXXXXX</h6>
                 </div>
                 <div class="col-md-6">
-                  <p style="font-weight:bold">Dirección Fiscal de cliente</p>
+                  <p style="font-weight:bold">Dirección fiscal de cliente</p>
                   <h6 class="text-muted">XXXXXXXXXX XX XXXX XXX XXXXXXX XXX XX</h6>
 
                   <!-- <br> -->
