--- a/app/comps/facturado/facturado.html
+++ b/app/comps/facturado/facturado.html
@@ -6,7 +6,7 @@
     <div class="modal-dialog  mw-100 modal-90">
       <div class="modal-content">
         <div class="modal-header">
-          <h4 class="modal-title">Detalle De Factura</h4>
+          <h4 class="modal-title">Detalle de factura</h4>
           <button type="button" class="close" data-dismiss="modal" aria-hidden="true"  >&times;</button>
 
         </div>
@@ -24,16 +24,16 @@
                   <table datatable="ng" dt-options="dtOptionsFact"  class="table table-striped table-bordered" >
                     <thead>
                         <tr>
-                        <th scope="col"><p class="text-center">Linea</p></th>
-                        <th scope="col"><p class="text-center">Nombre articulo</p></th>
+                        <th scope="col"><p class="text-center">Línea</p></th>
+                        <th scope="col"><p class="text-center">Nombre del articulo</p></th>
                         <!-- <th scope="col"><p class="text-center">Fecha pedido</p></th> -->
                         <!-- <th scope="col"><p class="text-center">Fecha factura</p></th> -->
                         <th scope="col"><p class="text-center">Unidades pedido</p></th>
                         <th scope="col"><p class="text-center">Unidades facturadas</p></th>
                         <!-- <th scope="col"><p class="text-center">Nombre Vendedor</p></th>
                         <th scope="col"><p class="text-center">Email Vendedor</p></th> -->
-                        <th scope="col"><p class="text-center">Monto bs</p></th>
-                        <th scope="col"><p class="text-center">Monto usd</p></th>
+                        <th scope="col"><p class="text-center">Monto Bs.</p></th>
+                        <th scope="col"><p class="text-center">Monto USD</p></th>
                         </tr>
                     </thead>
                     <tbody>
@@ -70,7 +70,7 @@
 
                                         <tr>
                                             <td class="right">
-                                                <strong class="text-dark">Total Bs.s</strong> </td>
+                                                <strong class="text-dark">Total Bs</strong> </td>
 
                                                 <td class="right">{{formato(2,totalfactura.bs)}} </td>
                                         </tr>
@@ -134,8 +134,8 @@
                       class="form-control"
                       ng-keydown="$event.keyCode === 13 && getClientNew(true)"
                       ng-model="nombre_cliente"
-                      placeholder="Búsqueda por Cliente"
-                      aria-label="Búsqueda por Cliente"
+                      placeholder="Búsqueda por cliente"
+                      aria-label="Búsqueda por cliente"
                       aria-describedby="basic-addon2">
                       <div class="input-group-append">
                         <button class="btn btn-outline-secondary"  ng-click="getClientNew(true)" type="button">Buscar</button>
@@ -190,12 +190,12 @@
                     <thead>
                       <tr>
                         <th scope="col"><p class="text-center">#</p></th>
-                        <!-- <th scope="col"><p class="text-center">N.º Pedido</p></th> -->
+                        <!-- <th scope="col"><p class="text-center">Nº Pedido</p></th> -->
                         <!-- <th scope="col"><p class="text-center">Fecha pedido</p></th> -->
-                        <th scope="col"><p class="text-center">N.º factura</p></th>
+                        <th scope="col"><p class="text-center">Nº factura</p></th>
                         <th scope="col"><p class="text-center">Fecha factura</p></th>
-                        <th scope="col"><p class="text-center">Monto</p></th>
-                        <th scope="col"><p class="text-center">Monto usd</p></th>
+                        <th scope="col"><p class="text-center">Monto Bs.</p></th>
+                        <th scope="col"><p class="text-center">Monto USD</p></th>
                         <th scope="col"><p class="text-center">Tipo pedido</p></th>
                         <th scope="col" ng-if="!isEmpleado" ><p class="text-center">Fecha de entrega</p></th>
                         <!-- <th scope="col"><p class="text-center">Email vendedor</p></th> -->
