--- a/app/comps/login/login.html
+++ b/app/comps/login/login.html
@@ -11,10 +11,10 @@
                   <!-- <h5>RS - LogIn</h5> -->
                   <img src="img/logoddo.png" style="width:100%;height:100%" alt="">
                   <div class="illustration"><i class="icon ion-ios-locked-outline"></i></div>
-                  <div class="form-group"><input class="form-control" type="text" name="username" placeholder="Username" ng-model="user.username"></div>
-                  <div class="form-group"><input class="form-control" type="password" name="password" placeholder="Password" ng-keydown="$event.keyCode === 13 && login()" ng-model="user.password"></div>
+                  <div class="form-group"><input class="form-control" type="text" name="username" placeholder="Nombre de usuario" ng-model="user.username"></div>
+                  <div class="form-group"><input class="form-control" type="password" name="password" placeholder="Contraseña" ng-keydown="$event.keyCode === 13 && login()" ng-model="user.password"></div>
                   <div class="g-recaptcha" data-sitekey="6LeY06oUAAAAANYQWer17SpCoL_JKWQQusxCzS3l"></div>
-                  <div class="form-group"><button class="btn btn-primary btn-block" type="button" ng-click="login()">Log In</button></div><a href="#!/olvidoPass" class="forgot">¿Olvidó su contraseña?</a></form>
+                  <div class="form-group"><button class="btn btn-primary btn-block" type="button" ng-click="login()">INICIAR SESIÓN</button></div><a href="#!/olvidoPass" class="forgot">¿Olvidó su contraseña?</a></form>
           </div>
 
     </div>
