--- a/app/index.html
+++ b/app/index.html
@@ -55,7 +55,7 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h4 class="modal-title">Confirmacion</h4>
+            <h4 class="modal-title">Confirmación</h4>
             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
 
           </div>
@@ -64,7 +64,7 @@
             <div class="container">
 
               <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                  <h3><p class="text-center">¿Desea cerrar la sesion?</p></h3>
+                  <h3><p class="text-center">¿Desea cerrar la sesión?</p></h3>
               </div>
 
             </div>
@@ -73,7 +73,7 @@
           <div class="modal-footer">
             <button type="button" class="btn btn-info" data-dismiss="modal">No</button>
             <a href="#!/login"  >
-              <button type="button" class="btn btn-danger" >Si</button>
+              <button type="button" class="btn btn-danger" >Sí</button>
             </a>
           </div>
         </div>
